# ashare-ma-strategy

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: strategy.md
examples/: signal_demo.py
examples/data/: sample_index.csv  sample_stock.csv
src/ashare_ma_strategy/: __init__.py  backtest.py  cli.py  signals.py
tests/: test_signals.py
